--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -60,13 +60,13 @@
   margin-bottom: 8px;
 }
 
-#nuxt-content code {
+#nuxt-content pre {
   background-color: #f6f6f6;
   border: 1px solid #ddd;
   border-radius: 6px;
   font-size: 12px;
   overflow: hidden;
-  padding: 4px;
+  padding: 8px 16px;
   margin-bottom: 8px;
   text-wrap: nowrap;
 }
@@ -80,6 +80,7 @@
 
 #nuxt-content table th,
 #nuxt-content table td {
+  font-size: 14px;
   border: 1px solid #ddd;
   padding: 8px 16px;
 }
