--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -8,19 +8,19 @@
   color: #3c3c3c;
 }
 
-#nuxt-content h1 {
+#nuxt-content h2 {
   font-size: 24px;
-  margin: 48px 0 16px;
+  padding-top: 32px;
+  margin-bottom: 24px;
 }
 
-#nuxt-content h2 {
-  font-size: 20px;
-  margin: 48px 0 16px;
+#nuxt-content h2:first-child {
+  padding-top: 0;
 }
 
 #nuxt-content h3 {
-  font-size: 16px;
-  margin: 24px 0 16px;
+  font-size: 20px;
+  margin-bottom: 24px;
 }
 
 #nuxt-content h1 > a,
@@ -35,11 +35,15 @@
 }
 
 #nuxt-content p {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+}
+
+#nuxt-content p:last-child {
+  margin-bottom: 0;
 }
 
 #nuxt-content ul {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 #nuxt-content ul li {
@@ -57,7 +61,7 @@
   font-style: italic;
   padding: 16px;
   border-radius: 4px;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 #nuxt-content pre {
@@ -67,7 +71,7 @@
   font-size: 12px;
   overflow: hidden;
   padding: 8px 16px;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
   text-wrap: nowrap;
 }
 
@@ -75,7 +79,7 @@
   width: 100%;
   border: 1px solid #ddd;
   border-collapse: collapse;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 #nuxt-content table th,
@@ -89,5 +93,5 @@
   display: block;
   width: 100%;
   height: 100%;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
