:rocket: change primary border color

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -9,5 +9,5 @@ html.dark-mode {
   --primary-text: #F1F2F4;
   --primary-bg: #101214;
   --secondary-bg: #161A1D;
-  --primary-border: #22272B;
+  --primary-border: #F1F2F4;
 }
