--- a/app/assets/css/remark-link-card.css
+++ b/app/assets/css/remark-link-card.css
@@ -17,7 +17,7 @@
 }
 
 .rlc-container:hover {
-  background-color: #f6f6f6;
+  background-color: var(--secondary-bg);
 }
 
 .rlc-info {
@@ -39,7 +39,7 @@
 
 .rlc-description {
   font-size: 12px;
-  color: #333;
+  color: var(--primary-text);
   overflow: hidden;
   line-height: 1rem;
   height: 2rem;
