--- a/app/assets/css/markdown.css
+++ b/app/assets/css/markdown.css
@@ -5,7 +5,7 @@
 #nuxt-content ul li,
 #nuxt-content table th,
 #nuxt-content table td {
-  color: var(--primary-text);
+  color: var(--primary-text-color);
 }
 
 #nuxt-content h2 {
@@ -26,7 +26,7 @@
 #nuxt-content h1 > a,
 #nuxt-content h2 > a,
 #nuxt-content h3 > a {
-  color: var(--primary-text);
+  color: var(--primary-text-color);
   text-decoration: none;
 }
 
@@ -57,7 +57,7 @@
 
 #nuxt-content blockquote {
   background-color: #f6f6f6;
-  border: 1px solid var(--primary-border);
+  border: 1px solid var(--primary-border-color);
   font-style: italic;
   padding: 16px;
   border-radius: 4px;
@@ -66,7 +66,7 @@
 
 #nuxt-content pre {
   background-color: #f6f6f6;
-  border: 1px solid var(--primary-border);
+  border: 1px solid var(--primary-border-color);
   border-radius: 6px;
   font-size: 14px;
   overflow: auto;
@@ -77,7 +77,7 @@
 
 #nuxt-content table {
   width: 100%;
-  border: 1px solid var(--primary-border);
+  border: 1px solid var(--primary-border-color);
   border-collapse: collapse;
   margin-bottom: 16px;
 }
@@ -85,7 +85,7 @@
 #nuxt-content table th,
 #nuxt-content table td {
   font-size: 14px;
-  border: 1px solid var(--primary-border);
+  border: 1px solid var(--primary-border-color);
   padding: 8px 16px;
 }
 
