--- a/app/assets/css/remark-link-card.css
+++ b/app/assets/css/remark-link-card.css
@@ -5,10 +5,10 @@
   max-height: 120px;
   margin: 0 auto 16px;
 
-  color: var(--primary-text);
+  color: var(--primary-text-color);
   text-decoration: none;
 
-  border: 1px solid var(--primary-border);
+  border: 1px solid var(--primary-border-color);
   border-radius: 0.25rem;
   display: flex;
   align-items: stretch;
@@ -17,7 +17,7 @@
 }
 
 .rlc-container:hover {
-  background-color: var(--secondary-bg);
+  background-color: var(--secondary-bg-color);
 }
 
 .rlc-info {
@@ -39,7 +39,7 @@
 
 .rlc-description {
   font-size: 12px;
-  color: var(--primary-text);
+  color: var(--primary-text-color);
   overflow: hidden;
   line-height: 1rem;
   height: 2rem;
@@ -82,5 +82,5 @@
   border-bottom-right-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
   margin: 0 !important;
-  border-left: 1px solid var(--primary-border);
+  border-left: 1px solid var(--primary-border-color);
 }
